--- a/styles.css
+++ b/styles.css
@@ -25,23 +25,19 @@ h1 {
     padding: 2rem;
 }
 
-
 label {
     font-weight: 500;
     font-size: 1.3rem;
-   
+    display: block;
 }
 
 input {
-    border-radius: 0.5rem;
-    width: 20%;
-    padding: 1rem;
-    border: solid 2px var(--blue);
+    border-radius: 2px;
+    padding: 0.5rem;
+    border: 2px solid var(--blue);
     font-size: large;
-    margin: auto;
-    margin-top: 2rem;
+    margin: 1rem;
     text-align: center;
-    display: block;
 }
 
 #check-button {
@@ -62,7 +58,7 @@ input {
     display: block;
     margin: auto;
     margin-top: 2rem;
-    width: 20%;
+    width: 250px;
     text-align: center;
     padding: 1rem;
     font-size: x-large;
@@ -70,4 +66,26 @@ input {
     border-width: medium;
     border-radius: 5px;
     background-color: white;
+}
+
+footer {
+    text-align: center;
+}
+
+footer p {
+    font-size: large;
+    text-align: center;
+}
+
+footer-list {
+    margin: 1rem;
+}
+
+a,img {
+    display: inline;
+}
+
+img {
+    width: 40px;
+    padding: 0.2rem;
 }
